# mcp-atlas

./: LICENSE  README.md
.github/workflows/: build.yml
_template/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
_template/src/template_mcp/: __init__.py  client.py  config.py  server.py
_template/tests/: test_smoke.py
azure-devops-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
azure-devops-mcp/src/azure_devops_mcp/: __init__.py  client.py  config.py  server.py
azure-devops-mcp/tests/: test_smoke.py
bookstack-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
bookstack-mcp/src/bookstack_mcp/: __init__.py  client.py  config.py  server.py
bookstack-mcp/tests/: test_smoke.py
defender-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
defender-mcp/src/defender_mcp/: __init__.py  config.py  graph.py  server.py
defender-mcp/tests/: test_smoke.py  test_tools.py
fortigate-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
fortigate-mcp/src/fortigate_mcp/: __init__.py  client.py  config.py  server.py
fortigate-mcp/tests/: test_smoke.py
netbox-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
netbox-mcp/src/netbox_mcp/: __init__.py  client.py  config.py  server.py
netbox-mcp/tests/: test_smoke.py
netscaler-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
netscaler-mcp/src/netscaler_mcp/: __init__.py  client.py  config.py  server.py
netscaler-mcp/tests/: test_smoke.py
prtg-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
prtg-mcp/src/prtg_mcp/: __init__.py  client.py  config.py  server.py
prtg-mcp/tests/: test_smoke.py
snipeit-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
snipeit-mcp/src/snipeit_mcp/: __init__.py  client.py  config.py  server.py
snipeit-mcp/tests/: test_smoke.py
vcenter-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
vcenter-mcp/src/vcenter_mcp/: __init__.py  client.py  config.py  server.py
vcenter-mcp/tests/: test_smoke.py
wazuh-mcp/: .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
wazuh-mcp/src/wazuh_mcp/: __init__.py  config.py  indexer.py  manager.py  server.py
zammad-mcp/: .dockerignore  .env.example  Dockerfile  README.md  compose.yml  compose.yml.example  pyproject.toml
zammad-mcp/src/zammad_mcp/: __init__.py  client.py  config.py  server.py
zammad-mcp/tests/: test_smoke.py
