[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "template-mcp"
version = "0.1.0"
description = "Read-only MCP server template — copy, rename, and wire up your API"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "cai", email = "cai@nohub.lol" }]
keywords = ["mcp", "template"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
template-mcp = "template_mcp.server:main"

[tool.poetry]
packages = [{ include = "template_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
