[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "azure-devops-mcp"
version = "0.1.0"
description = "Read-only Azure DevOps Server (on-prem) MCP server — projects, repos, PRs, work items, builds"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "cai", email = "cai@nohub.lol" }]
keywords = ["mcp", "azure-devops", "tfs", "devops-server", "git"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
azure-devops-mcp = "azure_devops_mcp.server:main"

[tool.poetry]
packages = [{ include = "azure_devops_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
