[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "defender-mcp"
version = "0.1.0"
description = "Read-only Microsoft Defender XDR MCP server (advanced hunting, incidents, alerts, devices, vulnerabilities)"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "defender-mcp" }]
keywords = ["mcp", "defender", "xdr", "microsoft-graph", "security"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
defender-mcp = "defender_mcp.server:main"

[tool.poetry]
packages = [{ include = "defender_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
