[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "fortigate-mcp"
version = "0.1.0"
description = "Read-only FortiGate (FortiOS REST API) MCP server — policies, addresses, VPN, HA, system status"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "cai", email = "cai@nohub.lol" }]
keywords = ["mcp", "fortigate", "fortios", "fortinet", "firewall"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
fortigate-mcp = "fortigate_mcp.server:main"

[tool.poetry]
packages = [{ include = "fortigate_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
