[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "netscaler-mcp"
version = "0.1.0"
description = "Read-only NetScaler ADC (NITRO) MCP server — vservers, services, SSL certs, HA, system stats"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "cai", email = "cai@nohub.lol" }]
keywords = ["mcp", "netscaler", "citrix-adc", "nitro", "load-balancer"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
netscaler-mcp = "netscaler_mcp.server:main"

[tool.poetry]
packages = [{ include = "netscaler_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
