[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "snipeit-mcp"
version = "0.1.0"
description = "Snipe-IT asset-management MCP server (read + opt-in write) — assets, checkout/checkin, users"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "cai", email = "cai@nohub.lol" }]
keywords = ["mcp", "snipe-it", "asset-management", "itam", "inventory"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
snipeit-mcp = "snipeit_mcp.server:main"

[tool.poetry]
packages = [{ include = "snipeit_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
