[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[project]
name = "vcenter-mcp"
version = "0.1.0"
description = "Read-only VMware vCenter (vSphere Automation API) MCP server — VMs, hosts, clusters, datastores, health"
readme = "README.md"
requires-python = ">=3.14"
license = "MIT"
authors = [{ name = "cai", email = "cai@nohub.lol" }]
keywords = ["mcp", "vcenter", "vsphere", "vmware", "virtualization"]
dependencies = [
    "mcp[cli]>=1.28,<2",
    "httpx>=0.28",
]

[project.scripts]
vcenter-mcp = "vcenter_mcp.server:main"

[tool.poetry]
packages = [{ include = "vcenter_mcp", from = "src" }]

[tool.poetry.group.dev.dependencies]
pytest = ">=9"

[tool.pytest.ini_options]
testpaths = ["tests"]
